# html-to-dom

./: .clangd  CMakeLists.txt  README.md
include/html2dom/: dom.h  lexer.h
src/: dom.c  lexer.c  main.c
